hphp/hack/test/typecheck/reactive/mayberx7_1.php.exp
File "mayberx7_1.php", line 11, characters 10-44:
Reactive functions can only call other reactive functions. (Typing[4200])
File "mayberx7_1.php", line 4, characters 10-16:
This function is non-reactive.
File "mayberx7_1.php", line 11, characters 18-43:
This argument caused function to be non-reactive.
